@@ -155,7 +155,7 @@ static void release_mutex (pthread_mutex_t *mutex)
 static inline int
 keep_trying (int r)
 {
-	return r == -1 && errno == EINTR && !mono_runtime_is_shutting_down();
+	return r == -1 && errno == EINTR;
 }
 
 static void
@@ -333,7 +333,7 @@ teardown_pipes (signal_info** signals, int count)
 }
 
 static int
-wait_for_any (signal_info** signals, int count, int *currfd, struct pollfd* fd_structs, int timeout)
+wait_for_any (signal_info** signals, int count, int *currfd, struct pollfd* fd_structs, int timeout, Mono_Posix_RuntimeIsShuttingDown shutting_down)
 {
 	int r, idx;
 	do {
@@ -345,7 +345,7 @@ wait_for_any (signal_info** signals, int count, int *currfd, struct pollfd* fd_s
 			ptv = &tv;
 		}
 		r = poll (fd_structs, count, timeout);
-	} while (keep_trying (r));
+	} while (keep_trying (r) && !shutting_down ());
 
 	idx = -1;
 	if (r == 0)
@@ -359,7 +359,7 @@ wait_for_any (signal_info** signals, int count, int *currfd, struct pollfd* fd_s
 				char c;
 				do {
 					r = read (h->read_fd, &c, 1);
-				} while (keep_trying (r));
+				} while (keep_trying (r) && !shutting_down ());
 				if (idx == -1)
 					idx = i;
 			}
@@ -375,7 +375,7 @@ wait_for_any (signal_info** signals, int count, int *currfd, struct pollfd* fd_s
  *          index into _signals array of signal that was generated on success
  */
 int
-Mono_Unix_UnixSignal_WaitAny (void** _signals, int count, int timeout /* milliseconds */)
+Mono_Unix_UnixSignal_WaitAny (void** _signals, int count, int timeout /* milliseconds */, Mono_Posix_RuntimeIsShuttingDown shutting_down)
 {
 	int r;
 	int currfd = 0;
@@ -394,7 +394,7 @@ Mono_Unix_UnixSignal_WaitAny (void** _signals, int count, int timeout /* millise
 	release_mutex (&signals_mutex);
 
 	if (r == 0) {
-		r = wait_for_any (signals, count, &currfd, &fd_structs[0], timeout);
+		r = wait_for_any (signals, count, &currfd, &fd_structs[0], timeout, shutting_down);
 	}
 
 	if (acquire_mutex (&signals_mutex) == -1)
